# iPI-rss

./: .gitignore  .gitmodules  README.md  config.cfg  main.py  pyproject.toml
