[tool.poetry]
name = "ipi-rss"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docutils = "^0.16"
doit = "^0.33.1"
sgmllib3k = "^1.0.0"
cchardet = "^2.1.7"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
